[tool.poetry]
name = "plank-server-sample"
version = "0.1.0"
description = ""
authors = ["Grady Zhuo <gradyzhuo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
plank-extend-fastapi = {git = "https://github.com/ospark-org/plank-extend-fastapi.git", rev = "main"}
plank = {git = "https://github.com/ospark-org/plank.git", rev = "main"}


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
